Shop page design

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.1.0",
-  "name": "xbox-videogames-next",
+  "name": "xbox-store-nextjs",
   "author": "@sebaslon",
   "private": true,
   "description": "",
